--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Adriya - Minimal, Creative, One Page Bootstrap Template</title>
+<title>Divine Ede</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/flexslider.css">
 <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -23,11 +23,11 @@
 <!-- header top section -->
 <section class="banner" role="banner">
   <header id="header">
-    <div class="header-content clearfix"> <a class="logo" href="index.html"><img src="images/logo.png" alt=""></a>
+    <div class="header-content clearfix"> <a class="logo" href="index.html"><img src="images/logo.png" width="150px;" alt=""></a>
       <nav class="navigation" role="navigation">
         <ul class="primary-nav">
-          <li>612.269.8419</li>
-          <li><a href="mainlto:hello@phdl.co">hello@agency.com</a></li>
+          <li><a class="current" href="#">Work</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -38,16 +38,13 @@
 <section id="hero" class="section ">
   <div class="container">
     <div class="row">
-      <div class="col-md-7 col-sm-6 hero">
+      <div class="col-md-12 col-sm-12 hero">
         <div class="hero-content">
-          <h1>Mordern, Minimal & Inspiring.</h1>
+          <h1>DIVINE IS A HIGH WYCOMBE BASED CREATIVE EXPLORING GRAPHIC DESIGN, UX/UI & INTERACTIVE DESIGN.</h1>
         </div>
         <!-- hero --> 
       </div>
-      <div class="col-md-5 col-sm-6 hero">
-        <div class="hero-content">
-          <p>FREE Bootstrap v3.3.5 frame work base minimal portfolio template for presonal use and creative agency.</p>
-        </div>
+     
         <!-- hero --> 
       </div>
     </div>
@@ -57,57 +54,54 @@
 <!-- portfolio grid section -->
 <section id="portfolio">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <hr class="section">
-      </div>
+   
     </div>
     <div class="row">
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="moviego.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
-            <h3>The Shape of Design</h3>
-            <h4>Branding/Graphic</h4>
+            <h3>Cinema booking app</h3>
+            <h4>MovieGo, 2022</h4>
           </div>
         </div>
         <img src="images/portfolio/work-1.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="mintecblog.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
+            <h3>Our Insight blog </h3>
+            <h4>Mintec, 2019</h4>
           </div>
         </div>
         <img src="images/portfolio/work-2.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="becrypt.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
+            <h3>Becrypt Cybersecurity</h3>
+            <h4>OneGTM, 2018</h4>
           </div>
         </div>
         <img src="images/portfolio/work-3.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="cme.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
+            <h3>Commonwealth Marine Economies</h3>
+            <h4>Mabox, 2018</h4>
           </div>
         </div>
         <img src="images/portfolio/work-4.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="aktive.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
+            <h3>Pharmacy Branding & Campaign</h3>
+            <h4>Aktive Pharmacy, 2017 - 2019</h4>
           </div>
         </div>
         <img src="images/portfolio/work-5.jpg" class="img-responsive" alt=""> </a> </div>
-      <div class="col-sm-6 portfolio-item"> <a href="work-details.html" class="portfolio-link">
+      <div class="col-sm-6 portfolio-item"> <a href="metronet.html" class="portfolio-link">
         <div class="caption">
           <div class="caption-content">
-            <h3>czarna kawka</h3>
-            <h4>Branding</h4>
+            <h3>Business partnership deck</h3>
+            <h4>Metronet, 2018</h4>
           </div>
         </div>
         <img src="images/portfolio/work-6.jpg" class="img-responsive" alt=""> </a> </div>
@@ -120,25 +114,10 @@
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-sm-6">
-        <h4>We're expert to create beautiful design & smart technology</h4>
-        <p>Nullam at enim mauris. Donec et nunc ipsum. Suspendi tempus fringilla ipsu Cras metus euismod velit gravida at nunc ipsum.</p>
+        <h4>SKILLS</h4>
+        <p>User Experience Design, Creativity, Communication, Typography, Adobe Creative, Interaction Design, HTML/CSS, Branding, Presentation Design, Project Management, User Interface, Illustration, Graphic Design</p>
       </div>
-      <div class="col-md-7 col-sm-6">
-        <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-browser"></span>
-          <div class="service-content">
-            <h5>Web & Mobile</h5>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-trophy"></span>
-          <div class="service-content">
-            <h5>Branding</h5>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 service text-center"> <span class="icon icon-megaphone"></span>
-          <div class="service-content">
-            <h5>Digital Marketing</h5>
-          </div>
-        </div>
+      
       </div>
     </div>
   </div>
@@ -147,13 +126,10 @@
 <!-- footer section -->
 <footer class="footer">
   <div class="container">
-    <div class="col-md-6 left">
-      <h4>Let's work together</h4>
-      <p> Call: 612.269.8419 OR Email : <a href="mailto:hello@agency.com"> hello@agency.com </a></p>
-    </div>
-    <div class="col-md-6 right">
-      <p>© 2015 All rights reserved. All Rights Reserved<br>
-        Made with <i class="fa fa-heart pulse"></i> by <a href="http://www.designstub.com/">Designstub</a></p>
+   
+    <div class="col-md-12 ">
+      <p>© 2022 Divine Ede. All Rights Reserved<br>
+        </p>
     </div>
   </div>
 </footer>
