--- a/aktive.html
+++ b/aktive.html
@@ -41,7 +41,7 @@
           <h4>Aktive Pharmacy, 2019</h4>
           <p>Role: Creative direction, design direction<br>
 Deliverables: Branding, Facebook Ads, Business Card<br></p>
-<p>tarting a new business in pharmacy, I worked with the manager to create the branding and promotional material for social media campaign to increase the visibility of the brand on facebook and online.</p><p> AKtive Pharmacy is a registered pharmacy founded and run by UK-qualified pharmacists, they have experience is in providing medicines for customers, and prescriptions.
+<p>Building a business brand in pharmacy, I worked with the manager to create the branding and promotional material for social media campaign to increase the visibility of the brand on facebook and online.</p><p> AKtive Pharmacy is a registered pharmacy founded and run by UK-qualified pharmacists, they have experience is in providing medicines for customers, and prescriptions.
 </p>
         </div> 
         <!-- hero --> 
