--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <ul class="primary-nav">
           <li><a class="current" href="#">Work</a></li>
           <li><a href="about.html">About</a></li>
+           <li><a href="Graphic Design Portfolio.pdf">PDF Version</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
