update to index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="primary-nav">
           <li><a class="current" href="#">Work</a></li>
           <li><a href="about.html">About</a></li>
-           <li><a href="Graphic Design Portfolio.pdf">PDF Version</a></li>
+           <li><a href="Graphic Design Portfolio.pdf">View PDF Version</a></li>
         </ul>
       </nav>
       <a href="#" class="nav-toggle">Menu<span></span></a> </div>
@@ -41,7 +41,7 @@
     <div class="row">
       <div class="col-md-12 col-sm-12 hero">
         <div class="hero-content">
-          <h1>DIVINE IS A HIGH WYCOMBE BASED CREATIVE EXPLORING GRAPHIC DESIGN, UX/UI & INTERACTIVE DESIGN.</h1>
+          <h1>DIVINE IS A HIGH WYCOMBE BASED CREATIVE, EXPLORING GRAPHIC DESIGN, UX/UI & INTERACTIVE DESIGN.</h1>
         </div>
         <!-- hero --> 
       </div>
